--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,5 @@ python-jose[cryptography]==3.3.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
+sqlalchemy[asyncio]==2.0.25
+asyncpg==0.29.0
